@@ -38,7 +38,6 @@ import java.io.File;
 import java.io.PrintStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.LinkedList;
 import java.util.List;
@@ -147,7 +146,7 @@ public final class LaunchUtils {
         if (envVars.containsKey(CONFIG_FILES_ENV_VARIABLE)) {
             String[] configPathList = envVars.get(CONFIG_FILES_ENV_VARIABLE).split(File.pathSeparator);
             for (String pathString : configPathList) {
-                paths.add(Paths.get(pathString));
+                paths.add(Path.of(pathString));
             }
         } else if (envVars.containsKey(CONFIG_DATA_ENV_VARIABLE)) {
             return envVars.get(CONFIG_DATA_ENV_VARIABLE);
@@ -161,7 +160,7 @@ public final class LaunchUtils {
 
     public static ConfigDetails getTestConfigPaths(Module module, String pkgName, String sourceRoot) {
         String moduleName = module.getName();
-        Path testConfigPath = Paths.get(sourceRoot);
+        Path testConfigPath = Path.of(sourceRoot);
         if (!Files.exists(testConfigPath)) {
             testConfigPath = getSourceRootInContainer();
         }
@@ -179,6 +178,6 @@ public final class LaunchUtils {
 
     private static Path getSourceRootInContainer() {
         // Since we are inside a docker container, it's current working directory is the source root.
-        return Paths.get(RuntimeUtils.USER_DIR);
+        return Path.of(RuntimeUtils.USER_DIR);
     }
 }
