@@ -29,7 +29,6 @@ import java.io.IOException;
 import java.nio.file.FileVisitResult;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.SimpleFileVisitor;
 import java.nio.file.StandardCopyOption;
 import java.nio.file.attribute.BasicFileAttributes;
@@ -87,7 +86,7 @@ public class MavenPackageRepositoryTests {
         }
     }
 
-    private static final Path RESOURCE_DIRECTORY = Paths.get("src", "test", "resources");
+    private static final Path RESOURCE_DIRECTORY = Path.of("src", "test", "resources");
     private static final Path TEST_REPO = RESOURCE_DIRECTORY.resolve("custom-repo-resources")
             .resolve("local-custom-repo");
     private MavenPackageRepository customPackageRepository;
