@@ -40,7 +40,6 @@ import java.net.URI;
 import java.net.URISyntaxException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collection;
 import java.util.List;
 import java.util.Optional;
@@ -71,7 +70,7 @@ public final class PathUtil {
             }
             URI converted = new URI(scheme, uri.getUserInfo(), uri.getHost(), uri.getPort(),
                     uri.getPath(), uri.getQuery(), uri.getFragment());
-            return Optional.of(Paths.get(converted));
+            return Optional.of(Path.of(converted));
         } catch (URISyntaxException e) {
             return Optional.empty();
         }
@@ -86,7 +85,7 @@ public final class PathUtil {
      */
     public static boolean isWriteProtectedPath(Path filePath) {
         Path homeReposPath = RepoUtils.createAndGetHomeReposPath();
-        Path ballerinaHome = CommonUtil.BALLERINA_HOME != null ? Paths.get(CommonUtil.BALLERINA_HOME) : null;
+        Path ballerinaHome = CommonUtil.BALLERINA_HOME != null ? Path.of(CommonUtil.BALLERINA_HOME) : null;
 
         return filePath.startsWith(homeReposPath) || ballerinaHome != null && filePath.startsWith(ballerinaHome);
     }
