@@ -23,7 +23,7 @@ import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 
 import java.io.IOException;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 /**
  * Test the formatting of class definition declarations.
@@ -57,6 +57,6 @@ public class ClassDefinitionDeclarationsTest extends FormatterTest {
      */
     @Override
     public String getTestResourceDir() {
-        return Paths.get("declarations", "class-definition").toString();
+        return Path.of("declarations/class-definition").toString();
     }
 }
