@@ -20,7 +20,7 @@ import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 
 import java.io.IOException;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 /**
  * Test the formatting of XML template expressions.
@@ -43,6 +43,6 @@ public class XMLTemplateExpressionsTest extends FormatterTest {
 
     @Override
     public String getTestResourceDir() {
-        return Paths.get("expressions", "xml-template").toString();
+        return Path.of("expressions/xml-template").toString();
     }
 }
