@@ -20,7 +20,7 @@ import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 
 import java.io.IOException;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 /**
  * Test the formatting of other type descriptors.
@@ -43,6 +43,6 @@ public class OtherTypesTest extends FormatterTest {
 
     @Override
     public String getTestResourceDir() {
-        return Paths.get("types", "other").toString();
+        return Path.of("types/other").toString();
     }
 }
