@@ -52,7 +52,6 @@ import java.io.Writer;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
@@ -348,7 +347,7 @@ public final class TesterinaCompilerPluginUtils {
             }
         }
 
-        Path jsonFilePath = Paths.get(path.toString(), fileName);
+        Path jsonFilePath = Path.of(path.toString(), fileName);
         File jsonFile = new File(jsonFilePath.toString());
         try (FileOutputStream fileOutputStream = new FileOutputStream(jsonFile)) {
             try (Writer writer = new OutputStreamWriter(fileOutputStream, StandardCharsets.UTF_8)) {
